[package]
name = "letterboxed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
multiqueue = "0.3.2"
rand = "0.8.5"
rayon = "1.9.0"
regex = "1.10.2"
statig = "0.3.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
